--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,4 @@
 CACHEDIR=./cache
 DATAVERSES=https://hub.dataverse.org/api/installation
+INTROPAGE=https://raw.githubusercontent.com/gdcc/mcp-dataverse/refs/heads/main/README.md
+PORT=8100
