Onboarding instruction to make MCP vendor independent

--- a/.env_sample
+++ b/.env_sample
@@ -2,3 +2,4 @@ CACHEDIR=./cache
 DATAVERSES=https://hub.dataverse.org/api/installation
 INTROPAGE=https://raw.githubusercontent.com/gdcc/mcp-dataverse/refs/heads/main/README.md
 PORT=8100
+ONBOARDING=/app/utils/onboarding.prompt
