--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - ${PORT}:8000
     environment:
       - PYTHONUNBUFFERED=1
+      - "ONBOARDING"
       - "DATAVERSES"
       - "INTROPAGE"
       - MCP_BASE_URL=http://localhost:8000/mcp
